--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -1,13 +1,27 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;500&family=Poppins:wght@100;300;400;500;700&family=Rajdhani:wght@300;400;700&family=Staatliches&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+a {
+  text-decoration: none;
+  color: #c8c2bc;
+  cursor: pointer;
+}
+a:hover {
+  color: #343a40;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+body {
+  margin: 0;
+  font-family: "Rajdhani", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #334756;
+  color: white;
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 50px;
 }
