styled match page

--- a/src/frontend/src/components/MatchDetails.scss
+++ b/src/frontend/src/components/MatchDetails.scss
@@ -3,6 +3,7 @@
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1;
   padding: 2%;
+  margin-bottom: 1%;
 
   .match-date,
   .match-venue,
