--- a/src/frontend/src/pages/TeamPage.scss
+++ b/src/frontend/src/pages/TeamPage.scss
@@ -3,8 +3,8 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 3;
   column-gap: 10px;
-  row-gap: 10%;
-  padding-top: 8%;
+  row-gap: 2%;
+  padding-top: 4%;
 
   .team-name-section {
     grid-column: span 3;
@@ -21,6 +21,7 @@
   }
   .wins-losses-sections {
     text-align: center;
+    font-size: 1.5rem;
   }
   h1 {
     color: #eeeeee;
